# template-compiler

./: .gitignore  README.md  mix.exs  run.exs
lib/: template_compiler.ex
lib/template_compiler/: application.ex  compiler.ex  index.ex  runtime.ex  variables.ex
priv/templater/: Cargo.toml.eex
priv/templater/src/: main.rs.eex
priv/templater/templates/: data_table.html.jinja  hello.html
test/: template_compiler_test.exs
traefik-config-server/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  json-schema.json
traefik-config-server/src/: main.rs  schema.rs
