[package]
name = "traefik-config-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["http2", "tracing"] }
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
serde_json = {version = "1"}
tracing = "0.1"
tracing-subscriber = "0.3"
